csharp/AntFfi/Native/NativeMethods.cs

using System.Runtime.InteropServices;

namespace AntFfi.Native;

/// <summary>
/// P/Invoke declarations for the ant_ffi native library.
/// </summary>
internal static partial class NativeMethods
{
    private const string LibName = "ant_ffi";

    #region Buffer Management

    /// <summary>
    /// Creates a RustBuffer from foreign bytes.
    /// </summary>
    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ffi_ant_ffi_rustbuffer_from_bytes")]
    public static extern RustBuffer RustBufferFromBytes(ForeignBytes bytes, ref RustCallStatus status);

    /// <summary>
    /// Frees a RustBuffer.
    /// </summary>
    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ffi_ant_ffi_rustbuffer_free")]
    public static extern void FreeRustBuffer(RustBuffer buf, ref RustCallStatus status);

    /// <summary>
    /// Allocates an empty RustBuffer with the specified capacity.
    /// </summary>
    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ffi_ant_ffi_rustbuffer_alloc")]
    public static extern RustBuffer AllocRustBuffer(ulong size, ref RustCallStatus status);

    #endregion

    #region Handle Cloning
    // UniFFI uses Arc::from_raw in try_lift, which consumes one Arc reference.
    // Every method/constructor call that takes an object handle must clone it first
    // to avoid use-after-free. These functions call Arc::increment_strong_count.

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_clone_secretkey")]
    public static extern IntPtr CloneSecretKey(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_clone_publickey")]
    public static extern IntPtr ClonePublicKey(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_clone_derivationindex")]
    public static extern IntPtr CloneDerivationIndex(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_clone_signature")]
    public static extern IntPtr CloneSignature(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_clone_mainsecretkey")]
    public static extern IntPtr CloneMainSecretKey(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_clone_mainpubkey")]
    public static extern IntPtr CloneMainPubkey(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_clone_derivedsecretkey")]
    public static extern IntPtr CloneDerivedSecretKey(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_clone_derivedpubkey")]
    public static extern IntPtr CloneDerivedPubkey(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_clone_chunk")]
    public static extern IntPtr CloneChunk(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_clone_chunkaddress")]
    public static extern IntPtr CloneChunkAddress(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_clone_dataaddress")]
    public static extern IntPtr CloneDataAddress(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_clone_datamapchunk")]
    public static extern IntPtr CloneDataMapChunk(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_clone_metadata")]
    public static extern IntPtr CloneMetadata(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_clone_archiveaddress")]
    public static extern IntPtr CloneArchiveAddress(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_clone_privatearchivedatamap")]
    public static extern IntPtr ClonePrivateArchiveDataMap(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_clone_publicarchive")]
    public static extern IntPtr ClonePublicArchive(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_clone_privatearchive")]
    public static extern IntPtr ClonePrivateArchive(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_clone_pointeraddress")]
    public static extern IntPtr ClonePointerAddress(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_clone_pointertarget")]
    public static extern IntPtr ClonePointerTarget(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_clone_networkpointer")]
    public static extern IntPtr CloneNetworkPointer(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_clone_scratchpadaddress")]
    public static extern IntPtr CloneScratchpadAddress(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_clone_scratchpad")]
    public static extern IntPtr CloneScratchpad(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_clone_registeraddress")]
    public static extern IntPtr CloneRegisterAddress(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_clone_graphentryaddress")]
    public static extern IntPtr CloneGraphEntryAddress(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_clone_graphentry")]
    public static extern IntPtr CloneGraphEntry(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_clone_vaultsecretkey")]
    public static extern IntPtr CloneVaultSecretKey(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_clone_userdata")]
    public static extern IntPtr CloneUserData(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_clone_network")]
    public static extern IntPtr CloneNetwork(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_clone_wallet")]
    public static extern IntPtr CloneWallet(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_clone_client")]
    public static extern IntPtr CloneClient(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_clone_datastream")]
    public static extern IntPtr CloneDataStream(IntPtr ptr, ref RustCallStatus status);

    #endregion

    #region Self-Encryption

    /// <summary>
    /// Encrypts data using self-encryption.
    /// </summary>
    /// <param name="data">The data to encrypt (serialized with UniFFI format).</param>
    /// <param name="status">Status of the call.</param>
    /// <returns>The encrypted data as a RustBuffer.</returns>
    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_func_encrypt")]
    public static extern RustBuffer Encrypt(RustBuffer data, ref RustCallStatus status);

    /// <summary>
    /// Decrypts self-encrypted data.
    /// </summary>
    /// <param name="encryptedData">The encrypted data to decrypt.</param>
    /// <param name="status">Status of the call.</param>
    /// <returns>The decrypted data as a RustBuffer.</returns>
    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_func_decrypt")]
    public static extern RustBuffer Decrypt(RustBuffer encryptedData, ref RustCallStatus status);

    #endregion

    #region Keys

    /// <summary>
    /// Creates a new random SecretKey.
    /// </summary>
    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_secretkey_random")]
    public static extern IntPtr SecretKeyRandom(ref RustCallStatus status);

    /// <summary>
    /// Creates a SecretKey from a hex string.
    /// </summary>
    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_secretkey_from_hex")]
    public static extern IntPtr SecretKeyFromHex(RustBuffer hex, ref RustCallStatus status);

    /// <summary>
    /// Converts a SecretKey to a hex string.
    /// Uses out parameter to fix Windows x64 struct return ABI.
    /// </summary>
    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_secretkey_to_hex")]
    public static extern void SecretKeyToHex(out RustBuffer result, IntPtr ptr, ref RustCallStatus status);

    /// <summary>
    /// Gets the PublicKey from a SecretKey.
    /// </summary>
    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_secretkey_public_key")]
    public static extern IntPtr SecretKeyPublicKey(IntPtr ptr, ref RustCallStatus status);

    /// <summary>
    /// Frees a SecretKey.
    /// </summary>
    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_free_secretkey")]
    public static extern void FreeSecretKey(IntPtr ptr, ref RustCallStatus status);

    /// <summary>
    /// Creates a PublicKey from a hex string.
    /// </summary>
    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_publickey_from_hex")]
    public static extern IntPtr PublicKeyFromHex(RustBuffer hex, ref RustCallStatus status);

    /// <summary>
    /// Converts a PublicKey to a hex string.
    /// Uses out parameter to fix Windows x64 struct return ABI.
    /// </summary>
    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_publickey_to_hex")]
    public static extern void PublicKeyToHex(out RustBuffer result, IntPtr ptr, ref RustCallStatus status);

    /// <summary>
    /// Frees a PublicKey.
    /// </summary>
    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_free_publickey")]
    public static extern void FreePublicKey(IntPtr ptr, ref RustCallStatus status);

    #endregion

    #region Key Derivation - DerivationIndex

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_derivationindex_random")]
    public static extern IntPtr DerivationIndexRandom(ref RustCallStatus status);
